[package]
name = "cpal_android_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.1"
reqwest = { version = "0.11.12", features = ["blocking"] }
symphonia = { version = "0.5.1", features = ["aac", "alac", "isomp4", "mp3"] }
rb = "0.4.1"
openssl-sys = { version = "0.9.77", features = ["vendored"] }
lazy_static = "1.4.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
oboe = { version = "0.4", features = [ "java-interface", "shared-stdcxx" ] }

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"